src/objects/AcctSeed__Scheduled_Revenue_Expense__c.object
<CustomObject>
    <description>Used to capture information related to deferred revenue and expenses.</description>
    <fields>
        <fullName>AcctSeed__Account2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Related Customer or Vendor</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account_Payable__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Reference to a related Payable.</inlineHelpText>
        <label>Payable</label>
        <referenceTo>AcctSeed__Account_Payable__c</referenceTo>
        <relationshipLabel>Amortized Expense</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Account__c</fullName>
        <formula>IF(ISBLANK(AcctSeed__Account2__c),AcctSeed__Project__r.AcctSeed__Account__r.Name,AcctSeed__Account2__r.Name)</formula>
        <inlineHelpText>The account on the project associated with this record.</inlineHelpText>
        <label>Project Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting.</inlineHelpText>
        <label>Accounting  Period</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <inlineHelpText>Amount of Amortized Revenue or Expense. Currency field. Values should be positive.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Reference to a related Billing.</inlineHelpText>
        <label>Billing</label>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Amortized Revenue</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Credit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Upon posting a credit entry will be made to this GL account.</inlineHelpText>
        <label>Credit GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Amortization Entries (Credit GL Account)</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expense1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Debit_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Upon posting a debit entry will be made to this GL account.</inlineHelpText>
        <label>Debit GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Amortization Entries (Debit GL Account)</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Description__c</fullName>
        <inlineHelpText>Used to capture any external source document identifier or description.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Fixed_Asset__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Reference to a related Fixed Asset.</inlineHelpText>
        <label>Fixed Asset</label>
        <referenceTo>AcctSeed__Fixed_Asset__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 1&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Amortization Entries (GL Account Variable 1)</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 2&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Amortization Entries (GL Account Variable 2)</relationshipLabel>
        <relationshipName>Scheduled_Revenues1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Accounting Variable must have a Type of &quot;GL Account Variable 3&quot;.</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Amortization Entries (GL Account Variable 3)</relationshipLabel>
        <relationshipName>Scheduled_Revenues2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the associated ledger.</description>
        <inlineHelpText>Denotes the associated ledger.</inlineHelpText>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Amortization_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Related Product.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenue_Expense</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to track a detailed component of Project.</inlineHelpText>
        <label>Project Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AcctSeed__Project__c</field>
                <operation>equals</operation>
                <valueField>AcctSeed__Project_Task__c.AcctSeed__Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project_Task__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Typically used to track customer engagements or events.</inlineHelpText>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Amortization Entries</relationshipLabel>
        <relationshipName>Scheduled_Revenues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Quantity__c</fullName>
        <inlineHelpText>Quantity for Product Pricing, Hours for Service pricing or costing.</inlineHelpText>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <inlineHelpText>A value of &quot;Posted&quot; indicates the record is final.</inlineHelpText>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                    <default>true</default>
                    <label>Scheduled</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Amortization Entry</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Billings</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Billing__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Billing__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Billings</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Fixed_Assets</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Fixed_Asset__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Fixed_Asset__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Fixed Assets</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Payables</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Account_Payable__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Account_Payable__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Payables</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Posted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>notEqual</operation>
            <value>Approved,In Process</value>
        </filters>
        <label>Posted</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Unposted</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Status__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Description__c</columns>
        <columns>AcctSeed__Debit_GL_Account__c</columns>
        <columns>AcctSeed__Credit_GL_Account__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Status__c</field>
            <operation>equals</operation>
            <value>Approved,In Process</value>
        </filters>
        <label>Unposted</label>
    </listViews>
    <nameField>
        <label>Amortization Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amortization Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Amount_Must_be_Positive</fullName>
        <active>true</active>
        <description>Amount Must be positive.</description>
        <errorConditionFormula>AcctSeed__Amount__c &lt;0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Amount__c</errorDisplayField>
        <errorMessage>The amount must be positive.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Project_Task_Required_With_Project</fullName>
        <active>true</active>
        <description>Rule ensures a Project Task is Required if the Project field is used.</description>
        <errorConditionFormula>NOT(ISBLANK(AcctSeed__Project__c)) &amp;&amp; ISBLANK(AcctSeed__Project_Task__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Project_Task__c</errorDisplayField>
        <errorMessage>A Project Task is required if a Project is selected.</errorMessage>
    </validationRules>
</CustomObject>